--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800");
+@import url("https://fonts.googleapis.com/css2?family=Karla");
 body {
   margin: 0;
   padding: 0;
