--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,7 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800");
 @import url("https://fonts.googleapis.com/css2?family=Karla");
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+
+html {
+  scroll-behavior: smooth;
 }
