--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,10 @@
 html {
   scroll-behavior: smooth;
 }
+.ck-editor__editable {
+  box-shadow: none !important;
+  min-height: 100%;
+}
+.ck-toolbar {
+  border: 0px !important;
+}
